conf/depl1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task08-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task08-1
  template:
    metadata:
      labels:
        app: task08-1
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
      - name: nginx
        image: nginx
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
        - name: http
          mountPath: /usr/share/nginx/html/

      volumes:
      - name: http
        configMap:
          name: task08-1
