conf/depl2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task08-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task08-depl
  template:
    metadata:
      labels:
        app: task08-depl
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
          - containerPort: 80
            name: http
        volumeMounts:
        - name: http
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: http
        configMap:
          name: task08-config
