conf/svc_depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: task08-svc
spec:
  selector:
    app: task08-depl
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  # externalIPs:
  #   - 192.168.120.100
