conf/svc_depl1.yaml
apiVersion: v1
kind: Service
metadata:
  name: task08-1
spec:
  selector:
    app: task08-1
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  externalIPs:
    - 192.168.120.100
